--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
         jvmTarget = '1.8'
     }
 
-    buildFeatures{
+    buildFeatures {
         viewBinding true
     }
 
@@ -53,7 +53,9 @@ dependencies {
     def room_version = '2.3.0'
     def gson_version = '2.8.6'
     def glide_version = '4.12.0'
-    def exoplayer_version='2.15.1'
+    def exoplayer_version = '2.15.1'
+    def arch_core_testing = '2.1.0'
+    def truth_version = '1.1.2'
 
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -67,6 +69,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    testImplementation "androidx.arch.core:core-testing:$arch_core_testing"
 
     // fragment ktx
     implementation "androidx.fragment:fragment-ktx:$frag_ktx_version"
@@ -96,6 +99,7 @@ dependencies {
 
     // coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_android_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_android_version"
 //    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_core_version"
 
 
@@ -105,7 +109,6 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
 
 
-
     // Gson
     implementation "com.google.code.gson:gson:$gson_version"
 
@@ -113,5 +116,8 @@ dependencies {
     //Exoplayer
     implementation "com.google.android.exoplayer:exoplayer:$exoplayer_version"
     implementation "com.google.android.exoplayer:exoplayer-core:$exoplayer_version"
+
+    // Truth
+    testImplementation "com.google.truth:truth:$truth_version"
 
 }
